feat: create header

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,14 @@
           </ul>
         </nav>
       </aside>
+      <header class="header">
+        <h1 class="header__title">Assets</h1>
+        <div class="sort-by">
+          <span class="sort-by__label">Sort by:</span>
+          <span class="sort-by__value">By price</span>
+          <span class="ico ico_arrow"></span>
+        </div>
+      </header>
       <main class="main-content"></main>
     </div>
   </body>
