feat: add icons to the sidebar items

--- a/src/index.html
+++ b/src/index.html
@@ -17,25 +17,46 @@
         <nav class="sidebar-nav">
           <ul class="navigation">
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Dashboard</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_home"></span>
+                Dashboard</a
+              >
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Accounts</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_wallet"></span>
+                Accounts</a
+              >
             </li>
             <li class="navigation__item navigation__item_active">
-              <a href="#" class="navigation__link">Assets</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_assets"></span>
+                Assets</a
+              >
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Recurring</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_recurring"></span>
+                Recurring</a
+              >
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Cards</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_card"></span>
+                Cards</a
+              >
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Services</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_service"></span>
+                Services</a
+              >
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">History</a>
+              <a href="#" class="navigation__link">
+                <span class="ico ico_history"></span>
+                History</a
+              >
             </li>
           </ul>
         </nav>
