feat: add icons to the sidebar links

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <div class="wrapper-main">
       <aside class="sidebar">
         <img
+          class="logo sidebar__logo"
           src="./assets/img/Logotype.svg"
           alt="Cryptopay Logotype"
-          class="logo"
         />
         <nav class="sidebar-nav">
           <ul class="navigation">
