--- a/src/index.html
+++ b/src/index.html
@@ -18,43 +18,45 @@
           <ul class="navigation">
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_home"></span>
+                <span class="ico ico_home ico__navigation"></span>
                 Dashboard</a
               >
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_wallet"></span>
+                <span class="ico ico_wallet ico__navigation"></span>
                 Accounts</a
               >
             </li>
             <li class="navigation__item navigation__item_active">
+              <span class="ico ico_active-rectangle"></span>
+
               <a href="#" class="navigation__link">
-                <span class="ico ico_assets"></span>
+                <span class="ico ico_assets ico__navigation"></span>
                 Assets</a
               >
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_recurring"></span>
+                <span class="ico ico_recurring ico__navigation"></span>
                 Recurring</a
               >
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_card"></span>
+                <span class="ico ico_card ico__navigation"></span>
                 Cards</a
               >
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_service"></span>
+                <span class="ico ico_service ico__navigation"></span>
                 Services</a
               >
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_history"></span>
+                <span class="ico ico_history ico__navigation"></span>
                 History</a
               >
             </li>
