feat: create styles for header

--- a/src/index.html
+++ b/src/index.html
@@ -64,19 +64,19 @@
         </nav>
       </aside>
 
-      <header class="header">
-        <div class="wrapper">
+      <div class="wrapper">
+        <header class="header">
           <h1 class="header__title">Assets</h1>
           <div class="sort-by">
             <span class="sort-by__label">Sort by:</span>
-            <span class="sort-by__value">By price</span>
-            <span class="ico ico_arrow"></span>
+            <div class="container-value">
+              <span class="sort-by__value">By price</span>
+              <span class="ico ico_arrow"></span>
+            </div>
           </div>
-        </div>
-      </header>
+        </header>
 
-      <main class="main-content">
-        <div class="wrapper">
+        <main class="main-content">
           <div class="cards">
             <div class="card">
               <div class="currency">
@@ -90,8 +90,8 @@
               <p class="currency__rate">$0,95</p>
             </div>
           </div>
-        </div>
-      </main>
+        </main>
+      </div>
     </div>
   </body>
 </html>
