feat: create initial styles for currency cards

--- a/src/index.html
+++ b/src/index.html
@@ -79,15 +79,91 @@
         <main class="main-content">
           <div class="cards">
             <div class="card">
-              <div class="currency">
+              <div class="card__currency">
                 <span class="ico ico_etherium"></span>
-                <div class="currency__wrapper">
-                  <h2 class="currency__title">Etherium</h2>
-                  <h3 class="currency__subtitle">ETH</h3>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
                 </div>
               </div>
+              <p class="card__rate">$0,95</p>
+            </div>
 
-              <p class="currency__rate">$0,95</p>
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
+            </div>
+
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
+            </div>
+
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
+            </div>
+
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
+            </div>
+
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
+            </div>
+
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
+            </div>
+
+            <div class="card">
+              <div class="card__currency">
+                <span class="ico ico_etherium"></span>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Etherium</h2>
+                  <h3 class="card__subtitle">ETH</h3>
+                </div>
+              </div>
+              <p class="card__rate">$0,95</p>
             </div>
           </div>
         </main>
