feat: create styles for 960px screens

--- a/src/index.html
+++ b/src/index.html
@@ -9,56 +9,53 @@
   <body>
     <div class="wrapper-main">
       <aside class="sidebar">
-        <img
-          class="logo sidebar__logo"
-          src="./assets/img/Logotype.svg"
-          alt="Cryptopay Logotype"
-        />
+        <span class="logo sidebar__logo"></span>
+
         <nav class="sidebar-nav">
           <ul class="navigation">
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_home ico__navigation"></span>
-                Dashboard</a
-              >
+                <span class="ico ico_home"></span>
+                <span class="navigation__text">Dashboard</span>
+              </a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_wallet ico__navigation"></span>
-                Accounts</a
-              >
+                <span class="ico ico_wallet"></span>
+                <span class="navigation__text">Accounts</span>
+              </a>
             </li>
             <li class="navigation__item navigation__item_active">
               <span class="ico ico_active-rectangle"></span>
 
               <a href="#" class="navigation__link">
-                <span class="ico ico_assets ico__navigation"></span>
-                Assets</a
-              >
+                <span class="ico ico_assets"></span>
+                <span class="navigation__text">Assets</span>
+              </a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_recurring ico__navigation"></span>
-                Recurring</a
-              >
+                <span class="ico ico_recurring"></span>
+                <span class="navigation__text">Recurring</span>
+              </a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_card ico__navigation"></span>
-                Cards</a
-              >
+                <span class="ico ico_card"></span>
+                <span class="navigation__text">Cards</span>
+              </a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_service ico__navigation"></span>
-                Services</a
-              >
+                <span class="ico ico_service"></span>
+                <span class="navigation__text">Services</span>
+              </a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">
-                <span class="ico ico_history ico__navigation"></span>
-                History</a
-              >
+                <span class="ico ico_history"></span>
+                <span class="navigation__text">History</span>
+              </a>
             </li>
           </ul>
         </nav>
