--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,45 @@
               <span class="ico ico_active-rectangle"></span>
 
               <a href="#" class="navigation__link">
-                <span class="ico ico_assets"></span>
+                <span class="icon-square">
+                  <!-- <span class="ico ico_assets navigation__ico_active"></span> -->
+                  <svg
+                    class="navigation__ico_active"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <rect
+                      x="1"
+                      y="9"
+                      width="5"
+                      height="14"
+                      rx="1"
+                      stroke="#6B7192"
+                      stroke-width="2"
+                    />
+                    <rect
+                      x="10"
+                      y="1"
+                      width="5"
+                      height="22"
+                      rx="1"
+                      stroke="#6B7192"
+                      stroke-width="2"
+                    />
+                    <rect
+                      x="19"
+                      y="17"
+                      width="4"
+                      height="6"
+                      rx="1"
+                      stroke="#6B7192"
+                      stroke-width="2"
+                    />
+                  </svg>
+                </span>
                 <span class="navigation__text">Assets</span>
               </a>
             </li>
