feat: make sidebar always take 100% height

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 <span class="icon-square">
                   <!-- <span class="ico ico_assets navigation__ico_active"></span> -->
                   <svg
-                    class="navigation__ico_active"
+                    class="ico ico_assets navigation__ico_active"
                     width="24"
                     height="24"
                     viewBox="0 0 24 24"
