feat: set cards columns to 1 for mobile screens

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
       </aside>
 
       <div class="wrapper">
-        <header class="header">
+        <header class="header header__main">
           <h1 class="header__title">Assets</h1>
           <div class="sort-by">
             <span class="sort-by__label">Sort by:</span>
