--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,20 @@
               </a>
             </li>
           </ul>
+
+          <button
+            class="sidebar__button-close-nav"
+            aria-label="close navigation"
+            type="button"
+          >
+            <object
+              type="image/svg+xml"
+              data="./assets/img/icons/cross.svg"
+              class="cross-icon"
+            >
+              Your browser does not support SVG
+            </object>
+          </button>
         </nav>
       </aside>
 
@@ -122,22 +136,10 @@
             <object
               type="image/svg+xml"
               data="./assets/img/icons/burger.svg"
-              class="burger-icon"
+              class="cross-icon"
             >
               Your browser does not support SVG
             </object>
-
-            <!-- <svg
-              width="30"
-              height="22"
-              viewBox="0 0 30 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <line y1="21" x2="30" y2="21" stroke="#F1CDB3" stroke-width="2" />
-              <line y1="11" x2="30" y2="11" stroke="#F1CDB3" stroke-width="2" />
-              <line y1="1" x2="30" y2="1" stroke="#F1CDB3" stroke-width="2" />
-            </svg> -->
           </button>
         </header>
 
