feat: fetch currencies data using async await

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
               <p class="card__rate">$0,95</p>
             </div>
 
-            <div class="card">
+            <!-- <div class="card">
               <div class="card__currency">
                 <span class="ico ico_etherium"></span>
                 <div class="card__wrapper">
@@ -231,7 +231,7 @@
                 </div>
               </div>
               <p class="card__rate">$0,95</p>
-            </div>
+            </div> -->
           </div>
         </main>
       </div>
