--- a/src/index.html
+++ b/src/index.html
@@ -144,95 +144,7 @@
         </header>
 
         <main class="main-content">
-          <div class="cards">
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <!-- <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div>
-
-            <div class="card">
-              <div class="card__currency">
-                <span class="ico ico_etherium"></span>
-                <div class="card__wrapper">
-                  <h2 class="card__title">Etherium</h2>
-                  <h3 class="card__subtitle">ETH</h3>
-                </div>
-              </div>
-              <p class="card__rate">$0,95</p>
-            </div> -->
-          </div>
+          <div class="cards"></div>
         </main>
       </div>
     </div>
